cli/test/fixtures/bad/inline_textstyle.dart
// Bad: inline TextStyle with literal fontSize
final s = TextStyle(fontSize: 14);
